<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorBackgroundInfo"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <ImageView
            android:id="@+id/avatarNeighbourView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_gravity="top"
            android:contentDescription="@string/pp_user"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/backToNeighbourList"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:srcCompat="?attr/homeAsUpIndicator"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/neighbourSelectedName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/avatarNeighbourView"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Neighbour Name" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/add_favorite_empty"
            app:backgroundTint="@color/colorBackgroundInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_star_border_black_24dp"
            app:tint="@null" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarNeighbourView"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatarNeighbourView"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/neighbourNameDisplay"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        tools:text="Neighbour"></TextView>

                    <View
                        android:id="@+id/linearView"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorBackgroundInfo"></View>

                    <LinearLayout
                        android:id="@+id/linearLocation"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearView">

                        <ImageView
                            android:id="@+id/locationImg"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/icon_localisation"
                            android:scaleType="center"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_location"
                            app:tint="@color/colorAccent" />

                        <TextView
                            android:id="@+id/locationTextView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:gravity="center_vertical"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="location" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearPhone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearLocation">

                        <ImageView
                            android:id="@+id/phoneImg"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/icon_phone"
                            android:scaleType="center"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_phone"
                            app:tint="@color/colorAccent" />

                        <TextView
                            android:id="@+id/phoneTextView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:gravity="center_vertical"
                            app:layout_constraintStart_toEndOf="@+id/phoneImg"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="phone number" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearContact"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearPhone">

                        <ImageView
                            android:id="@+id/contactImg"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/icon_world"
                            android:scaleType="center"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_world"
                            app:tint="@color/colorAccent" />

                        <TextView
                            android:id="@+id/webContact"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:gravity="center_vertical"
                            app:layout_constraintStart_toEndOf="@+id/contactImg"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="web contact"></TextView>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card1"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/linearCard2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/aboutMeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/card_neighbour_aboutme"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/linearView2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorBackgroundInfo"
                        app:layout_constraintTop_toBottomOf="@id/aboutMeTextView" />

                    <TextView
                        android:id="@+id/aboutMe_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintTop_toBottomOf="@id/linearView2"
                        tools:text=" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. " />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
