<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="card_neighbour_aboutme">A propos de moi</string>

    // string for images, icons, image's btn
    <string name="add_neighbour">neighbour add button</string>
    <string name="add_favorite_empty">favorite button add empty</string>
    <string name="add_favorite">favorite button add full</string>
    <string name="icon_world">icon world</string>
    <string name="icon_phone">icon phone</string>
    <string name="icon_localisation">icon localisation</string>
    <string name="back_btn">button return to main page</string>
    <string name="pp_user">profile picture user</string>
</resources>

